# ddisasm

./: .gitignore  CMakeLists.googletest  CMakeLists.txt  process_function_prototype.py
src/: CMakeLists.txt  Main.cpp  StructRecover.cpp  bfd_arch.cpp  bfd_arch.h  loadimage_bfd.cpp  loadimage_bfd.h  printLLVM.cpp  printLLVM.h
src/datalog/: data_access_analysis.dl  main.dl  value_analysis.dl
src/datalog/analysis/: struct_recovery.dl
src/datalog/arch/intel/: arch_x86_32.dl  registers_x86_64.dl
src/gtirb-builder/: ElfReader.cpp  GtirbBuilder.cpp  PeReader.cpp
src/gtirb-decoder/: DatalogProgram.h
src/passes/: CMakeLists.txt  StructRecoveryPass.cpp  StructRecoveryPass.h
src/passes/datalog/: struct_recovery.dl  struct_recovery_input.dl
src/passes/datalog/struct_recovery/: def_used.dl  depend.dl  expression.dl  input.dl  loop_detect.dl  object.dl  op_to_val.dl  point_to.dl  resolve_calc.dl  struct_recovery.dl  value_root.dl  value_type.dl
src/tools/: CMakeLists.txt
